# tg-web-app

./: pyproject.toml
tg_bot/: .gitignore  main.py
tg_bot/handlers/: questions.py
tg_bot/keyboards/: for_start.py
web_app/: package-lock.json  package.json
web_app/public/: index.html
web_app/src/: App.js
